- The sample of Practices-search(using JavaScript) is updated.
- The sample of Sample_chat is updated without using deprecated method.
- Add practice and sample applications for FileMaker Data API (Trial) to "Samples" directory.
- Update FileMaker sample DB ("TestDB.fmp12" and "TestDB_clone.fmp12") to set a object name of
  the portal object for FileMaker Data API (Trial).
- [INFO] PHP 5.2 and PHP 5.3 have been deprecated. INTER-Mediator Ver.6.0 will require PHP 5.4 or
  later (or PHP 5.5 or later).
- [INFO] FileMaker Server 12 and FileMaker Server 13 have been deprecated. INTER-Mediator Ver.6.0
  will require FileMaker Server 14 or later if using FileMaker Server.
- [INFO] The following methods are deprecated. These methods will be removed in Ver.6.0.
    INTERMediator_DBAdapter.server_access
    INTERMediator_DBAdapter.db_query
    INTERMediator_DBAdapter.db_queryWithAuth
    INTERMediator_DBAdapter.db_update
    INTERMediator_DBAdapter.db_updateWithAuth
    INTERMediator_DBAdapter.db_delete
    INTERMediator_DBAdapter.db_deleteWithAuth
    INTERMediator_DBAdapter.db_createRecord
    INTERMediator_DBAdapter.db_createRecordWithAuth
    INTERMediator_DBAdapter.db_copy
    INTERMediator_DBAdapter.db_copyWithAuth
- [INFO] Deprecated global variables $g_dbInstance, $g_serverSideCall in INTER-Mediator.php will be removed
  in Ver.6.0.
- [BUG FIX] Fix to add multiple times for target node which has "#" started target description.
- [BUG FIX] Replace the dataset property to set/get attribute methods for IE10.
- [BUG FIX] Justify the next line handling in TEXTAREA tagged element for IE9.
- [BUG FIX] Fix to disappear text and button name in the tag with data-im="_@update:..." or "_@addorder:...".
- [BUG FIX] The Auth_Manager sample in Auth_Support folder didn't work. So the UserList.php is removed.
- [BUG FIX] Master/Detail interface in mobile phone didn't return the master page from the detail page.