@@ -100,6 +100,8 @@ class MessageStrings_ja extends MessageStrings
         2019 => 'パスワードに記号類が含まれている必要があります',
         2020 => 'パスワードはユーザー名と異なる必要があります',
         2021 => 'パスワードは@1@文字以上である必要があります',
+        2022 => 'ユーザー登録をする(要メールアドレス)',
+        2023 => 'パスワードをリセットする(要メールアドレス)',
         3101 => "アップロードするファイルを\nドラッグ&ドロップする",
         3102 => 'ドラッグしたファイル: ',
         3201 => "ポスト可能なデータの最大値を超えました。", //設定はphp.iniファイルのpost_max_sizeです。
