@@ -24,7 +24,7 @@
 <p>Copyright (c) 2010-2018 INTER-Mediator Directive Committee, All rights reserved.</p>
 <p>This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.</p>
 
-<p>Please access web site <a href="http://inter-mediator.org">http://inter-mediator.org</a> to get details.
+<p>Our web site <a href="https://inter-mediator.com">https://inter-mediator.com</a> show you details of INTER-Mediator.
     This page is for to access easily to sample pages.</p>
 
 <h2>Practices</h2>
