@@ -84,6 +84,8 @@ Ver.5.7-RC2-dev (in development)
 - Add practice and sample applications for FileMaker Data API (Trial) to "Samples" directory.
 - Update FileMaker sample DB ("TestDB.fmp12" and "TestDB_clone.fmp12") to set a object name of
   the portal object for FileMaker Data API (Trial).
+- Show the "Enrollment" and "Password Reset" button on login panel with 'enroll-page' and 'reset-page' keys
+  in the option parameters (2nd argument of IM_Entry function).
 - [INFO] PHP 5.2 and PHP 5.3 have been deprecated. INTER-Mediator Ver.6.0 will require PHP 5.4 or
   later (or PHP 5.5 or later).
 - [INFO] FileMaker Server 12 and FileMaker Server 13 have been deprecated. INTER-Mediator Ver.6.0
